<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brickpixel" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/brickpixel" />

    <ImageView
        android:id="@+id/questScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pixelscroll"/>

    <TextView
        android:id="@+id/questTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questTitle"

        app:layout_constraintTop_toTopOf="@id/questScroll"
        android:textStyle="bold|italic"
        android:textSize="35sp"
        android:textColor="@color/shaded_black"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="75dp"/>


    <ImageView
        android:id="@+id/minotaurStill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/minotaurstill"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questTitle"

        />


    <TextView
        android:id="@+id/questText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/questText"
        android:textSize="18sp"
        android:textColor="@color/shaded_black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minotaurStill"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/questPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/questPrice"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/shaded_black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questText"
        android:layout_marginTop="0dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="acceptQuestHandler"
        android:text="@string/accept_quest"
        android:backgroundTint="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/questScroll"
        android:layout_marginBottom="65dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>